--- a/css/style.css
+++ b/css/style.css
@@ -2103,6 +2103,7 @@ body.clear-bg::before {
   font-size: 16px;
   cursor: pointer;
   margin: 0;
+  padding: 0;
 }
 
 .basket.active {
@@ -2808,6 +2809,10 @@ body.clear-bg::before {
   }
 
   .social__item {
+    font-size: 14px;
+  }
+
+  .social__block span {
     font-size: 14px;
   }
 
