--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,10 @@ body.clear-bg::before {
   height: 100vh;
 }
 
+.btn-more {
+  margin: 24px 0 144px;
+}
+
 @font-face {
   font-family: "Mont";
   src: url("../fonts/Mont-Light.woff") format("woff");
@@ -572,6 +576,7 @@ body.clear-bg::before {
 }
 
 .close__burger {
+  padding: 0;
   padding-top: 22px;
   background-color: transparent;
   border: none;
@@ -708,7 +713,7 @@ body.clear-bg::before {
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  margin-bottom: 52px;
+  margin-bottom: 41px;
   margin-left: 32px;
   color: #ffffff;
 }
@@ -798,7 +803,7 @@ body.clear-bg::before {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding-right: 24px;
@@ -851,8 +856,8 @@ body.clear-bg::before {
 }
 
 .filter__input {
-  padding-top: 0;
-  width: 60px;
+  width: 52px;
+  padding: 0;
   padding-bottom: 8px;
   border: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0);
@@ -871,14 +876,51 @@ body.clear-bg::before {
 .filter__input:focus {
   outline: none;
   width: 305px;
+  margin-right: 16px;
   border-bottom: 1px solid #fff;
   opacity: 1;
+}
+
+.filter__input::-webkit-input-placeholder {
+  padding: 0;
+  color: #fff;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+.filter__input::-moz-placeholder {
+  padding: 0;
+  color: #fff;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+.filter__input:-ms-input-placeholder {
+  padding: 0;
+  color: #fff;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+.filter__input::-ms-input-placeholder {
+  padding: 0;
+  color: #fff;
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+.filter__input::placeholder {
+  padding: 0;
+  color: #fff;
+  font-weight: 400;
+  opacity: 0.5;
 }
 
 .filter__right {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  align-self: end;
+  -ms-flex-item-align: end;
+      align-self: end;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -890,13 +932,15 @@ body.clear-bg::before {
           justify-content: flex-end;
   width: 450px;
   overflow: hidden;
-  grid-gap: 35px;
   padding-right: 24px;
-  gap: 35px;
 }
 
 .filter__right-box {
   position: relative;
+}
+
+.filter__right-box #search {
+  padding-right: 16px;
 }
 
 .filter__btn {
@@ -957,7 +1001,7 @@ body.clear-bg::before {
   transition: opacity 0.3s linear;
   position: absolute;
   top: 0;
-  right: 0;
+  right: 16px;
   cursor: pointer;
   border: none;
   background-color: transparent;
@@ -967,6 +1011,7 @@ body.clear-bg::before {
   padding: 0;
   font-family: "Mont", sans-serif;
   font-weight: 400;
+  opacity: 0.5;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -992,8 +1037,8 @@ body.clear-bg::before {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 450px);
-  grid-gap: 20px;
-  margin-bottom: 64px;
+  grid-gap: 24px;
+  /* margin-bottom: 64px; */
 }
 
 .products__grid.row {
@@ -1017,7 +1062,7 @@ body.clear-bg::before {
 }
 
 .products__item {
-  margin-bottom: 111px;
+  margin-bottom: 87px;
   text-decoration: none;
   color: inherit;
 }
@@ -1395,6 +1440,7 @@ body.clear-bg::before {
 
 .equipment-rental__descr {
   font-size: 16px;
+  font-weight: 300;
   line-height: 20px;
   text-align: justify;
   text-transform: uppercase;
@@ -2704,6 +2750,10 @@ body.clear-bg::before {
 }
 
 @media (max-width: 1919px) {
+  .header {
+    padding: 0 20px;
+  }
+
   .nav ul {
     padding-top: 17px;
   }
@@ -2712,6 +2762,10 @@ body.clear-bg::before {
   .nav ul li.hide,
   .nav ul li button {
     font-size: 14px;
+  }
+
+  .intro {
+    padding: 144px 20px 0 20px;
   }
 
   .intro__head {
@@ -2723,6 +2777,7 @@ body.clear-bg::before {
     font-weight: 300;
     font-size: 14px;
     line-height: 18px;
+    margin-bottom: 32px;
   }
 
   .intro__bottom-left {
@@ -2757,9 +2812,22 @@ body.clear-bg::before {
             column-gap: 0;
   }
 
+  .catalog {
+    padding-left: 20px;
+  }
+
   .filter__right {
     -ms-flex-item-align: start;
         align-self: start;
+    padding-right: 20px;
+  }
+
+  .products {
+    padding: 0 20px;
+  }
+
+  .about {
+    padding: 0 20px;
   }
 
   .about__title {
@@ -2811,6 +2879,10 @@ body.clear-bg::before {
     line-height: 26px;
   }
 
+  .statistics {
+    padding: 0 20px;
+  }
+
   .statistics__item {
     width: 370px;
     height: 370px;
@@ -2821,6 +2893,10 @@ body.clear-bg::before {
     max-width: 262px;
     font-weight: 600;
     line-height: 26px;
+  }
+
+  .equipment-rental {
+    padding: 0 20px;
   }
 
   .equipment-rental.dark {
@@ -2854,12 +2930,20 @@ body.clear-bg::before {
     margin-bottom: 42px;
   }
 
+  .social {
+    padding: 0 20px;
+  }
+
   .social__item {
     font-size: 14px;
   }
 
   .social__block span {
     font-size: 14px;
+  }
+
+  .product-about {
+    padding: 0 20px;
   }
 
   .product-about__wrapp .title {
@@ -2982,6 +3066,10 @@ body.clear-bg::before {
     line-height: 26px;
   }
 
+  .product-description {
+    padding: 0 20px;
+  }
+
   .product-description__title {
     font-weight: 600;
     font-size: 55px;
@@ -2992,6 +3080,10 @@ body.clear-bg::before {
     font-weight: 300;
     font-size: 14px;
     line-height: 18px;
+  }
+
+  .populars {
+    padding: 0 20px;
   }
 
   .populars__grid {
@@ -3018,20 +3110,30 @@ body.clear-bg::before {
 }
 
 @media (max-width: 1439px) {
+  .btn-more {
+    margin: 24px 0 120px;
+  }
+
+  .nav ul li a,
+  .nav ul li.hide,
+  .nav ul li button {
+    font-size: 12px;
+  }
+
   .intro__head {
     font-weight: 600;
     font-size: 144px;
   }
 
   .intro__top-right p {
-    max-width: 277px;
+    max-width: 270px;
     font-weight: normal;
     font-size: 12px;
     line-height: 15px;
+    margin-bottom: 26px;
   }
 
   .intro__bottom-left {
-    margin-right: 18px;
     max-width: 430px;
   }
 
@@ -3063,12 +3165,16 @@ body.clear-bg::before {
   }
 
   .products__grid {
-    grid-template-rows: repeat(6, 377px);
+    grid-template-rows: repeat(6, 300px);
     grid-gap: 24px;
   }
 
   .products__grid.row {
-    grid-template-rows: repeat(3, 377px);
+    grid-template-rows: repeat(3, 300px);
+  }
+
+  .products__item {
+    margin-bottom: 63px;
   }
 
   .products__item-name {
@@ -3143,6 +3249,10 @@ body.clear-bg::before {
     line-height: 23px;
   }
 
+  .statistics {
+    margin-bottom: 120px;
+  }
+
   .statistics__item {
     width: 260px;
     height: 260px;
@@ -3156,6 +3266,7 @@ body.clear-bg::before {
   }
 
   .equipment-rental {
+    margin-bottom: 120px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -3168,8 +3279,8 @@ body.clear-bg::before {
   }
 
   .equipment-rental__title-right {
-    margin-right: 0;
-    margin-left: auto;
+    margin-right: auto;
+    margin-left: 314px;
     width: 688px;
     text-align: left;
   }
@@ -3195,6 +3306,10 @@ body.clear-bg::before {
     max-width: 688px;
   }
 
+  .social__item {
+    font-size: 12px;
+  }
+
   .social__block {
     -webkit-column-gap: 20px;
        -moz-column-gap: 20px;
@@ -3202,7 +3317,7 @@ body.clear-bg::before {
   }
 
   .social__block span {
-    font-size: 14px;
+    font-size: 12px;
   }
 
   /* Выключен */
@@ -3372,6 +3487,10 @@ body.clear-bg::before {
 }
 
 @media (max-width: 1023px) {
+  .btn-more {
+    margin: 37px 0 120px;
+  }
+
   .header__logo img {
     width: 102px;
     height: 68px;
@@ -3399,7 +3518,8 @@ body.clear-bg::before {
     display: none;
   }
 
-  .nav ul li.hide {
+  .nav ul li.hide,
+  .nav ul li span {
     font-size: 12px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3452,6 +3572,10 @@ body.clear-bg::before {
   .intro__wrapp {
     margin-left: 0;
     margin-right: auto;
+  }
+
+  .catalog__box {
+    display: none;
   }
 
   .filter {
@@ -3509,7 +3633,7 @@ body.clear-bg::before {
   .about__left {
     position: absolute;
     top: -70px;
-    left: 70%;
+    left: 74.5%;
   }
 
   .about__left img {
@@ -3547,14 +3671,14 @@ body.clear-bg::before {
   .statistics__box {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    max-width: 720px;
+    max-width: 695px;
     margin: 0 auto;
   }
 
   .statistics__item {
-    width: 374px;
-    height: 374px;
-    margin: -12px;
+    width: 370px;
+    height: 370px;
+    margin: -10px -12px;
     padding: 30px;
   }
 
@@ -3593,8 +3717,8 @@ body.clear-bg::before {
   }
 
   .equipment-rental__title-right {
-    margin-right: 0;
-    margin-left: auto;
+    margin-right: auto;
+    margin-left: 314px;
     width: 338px;
     text-align: left;
   }
@@ -3734,6 +3858,18 @@ body.clear-bg::before {
 }
 
 @media (max-width: 767px) {
+  .btn-more {
+    margin: 30px 0 104px;
+  }
+
+  .header__lang {
+    font-size: 12px;
+  }
+
+  .close__burger {
+    font-size: 12px;
+  }
+
   .header {
     padding: 0 16px;
   }
@@ -3839,6 +3975,10 @@ body.clear-bg::before {
     margin-bottom: 56px;
   }
 
+  .filter__left {
+    margin-bottom: 24px;
+  }
+
   .filter__left-box {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
@@ -3939,6 +4079,14 @@ body.clear-bg::before {
     line-height: 20px;
   }
 
+  .statistics {
+    margin-bottom: 104px;
+  }
+
+  .statistics__box {
+    max-width: 638px;
+  }
+
   .statistics__item {
     width: 343px;
     height: 343px;
@@ -3963,9 +4111,11 @@ body.clear-bg::before {
   }
 
   .equipment-rental__title-right {
-    margin: 0 auto;
-    width: 100%;
-    text-align: center;
+    margin-left: 75px;
+    margin-right: auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .equipment-rental__descr {
@@ -3991,6 +4141,7 @@ body.clear-bg::before {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding-bottom: 14px;
   }
 
   .social__block:nth-child(2) {
